# DumbEq

./: Cargo.toml  README.md
dumbeq/: lib.rs
tests/: test.rs
