[package]
name = "dumbeq"
version = "0.1.0"
description = "dumbeq library"
readme = "README.md"
homepage = "https://crates.io/crates/dumbeq"
license = "MIT OR Apache-2.0"
edition = "2021"
autoexamples = false
autobenches = false


[lib]
proc-macro = true
name = "dumbeq"
path = "dumbeq/lib.rs"
bench = false

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env", "string", "unicode", "wrap_help"] }
iocore = "3.0.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
syn = "2.0.101"
