[package]
name = "dumbeq"
version = "0.1.1"

description = """DumbEq is a safe library providing a derive macro of
same name that implements [`std::cmp::PartialEq`] and
[`std::cmp::Eq`], always false."""

readme = "README.md"
homepage = "https://crates.io/crates/dumbeq"
license = "MIT OR Apache-2.0"
edition = "2021"
autoexamples = false
autobenches = false


[lib]
proc-macro = true
name = "dumbeq"
path = "dumbeq/lib.rs"
bench = false

[dependencies]
quote = "1.0.40"
syn = "2.0.101"
